# mot_dinov3

./: .env.example  .gitignore  README.md  clean.sh  cli.py  config.toml  pyproject.toml  setup.sh  update.sh
src/mot_dinov3/: __init__.py  compat.py  detector.py  embedder.py  scheduler.py  tracker.py  utils.py  viz.py
src/mot_dinov3/embedders/: __init__.py  base.py  dino.py  osnet.py  transreid.py
src/mot_dinov3/features/: base.py  dino.py  factory.py  osnet.py  transreid.py
